# template-anemoi-dataset

./: .gitignore  .gitmodules  LICENSE  README.md  README.template.md  pyproject.toml
.github/: CODEOWNERS
